# ParallelProgramming

./: readme.md
progs/CUDA/: CudaTasks.cu  CudaTasks.h  Makefile  bmp_reader.cpp  bmp_reader.h  main.cpp  readme.md
progs/CUDA/test/: CUDA.ipynb  hello.cu  vector_add1.cu
progs/IntroToThreads/: CMakeLists.txt  compile_win.bat  main.cpp  readme.md
progs/IntroToThreads/include/: Lesson1.h  Lesson2.h  Lesson3.h  Lesson4.h  Lesson5.h  Lesson6.h  Lesson7.h  Lesson8.h  Lesson9.h  Lessons.h  Timer.h
progs/IntroToThreads/src/: Lesson1.cpp  Lesson2.cpp  Lesson3.cpp  Lesson4.cpp  Lesson5.cpp  Lesson6.cpp  Lesson7.cpp  Lesson8.cpp  Lesson9.cpp  Timer.cpp
progs/Linux/processes/: Makefile  ProcessesTasks.cpp  ProcessesTasks.h  main.cpp  readme.md
progs/Linux/threads/: Makefile  ThreadsTasks.cpp  ThreadsTasks.h  main.cpp
progs/MPI/: MPI_collective.cpp  MPI_groups.cpp  MPI_p2p.cpp  bmp_reader.cpp  readme.md
progs/WinAPI/processes/: ProcessesTasks.cpp  ProcessesTasks.h  func.cpp  main.cpp  readme.md
progs/WinAPI/threads/: ThreadsTasks.cpp  ThreadsTasks.h  bmp_reader.cpp  bmp_reader.h  main.cpp  readme.md
